apps/usenet/seerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: usenet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: seerr
    spec:
      securityContext:
        fsGroup: 2000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 2000
            runAsGroup: 2000
            privileged: false
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 5055
          volumeMounts:
            - mountPath: /app/config
              name: data
          startupProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            failureThreshold: 20
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /api/v1/status
              port: 5055
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 3
      restartPolicy: Always
      automountServiceAccountToken: false
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: seerr-data
