apps/usenet/seerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: usenet
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - seerr.${BASE_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: seerr
          port: 5055
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr-legacy-domain-redirect
  namespace: usenet
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
      sectionName: external-https
    - name: internal
      namespace: envoy-gateway-system
      sectionName: internal-https
  hostnames:
    - overseerr.${BASE_DOMAIN}
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: seerr.${BASE_DOMAIN}
            statusCode: 301
